RESOLVED FIXED256046
[GStreamer][WebAudio] Missing playing notification in AudioDestination
https://bugs.webkit.org/show_bug.cgi?id=256046
Summary [GStreamer][WebAudio] Missing playing notification in AudioDestination
Philippe Normand
Reported 2023-04-27 08:42:24 PDT
.
Attachments
Philippe Normand
Comment 1 2023-04-27 08:44:29 PDT
EWS
Comment 2 2023-04-28 00:56:47 PDT
Committed 263492@main (4855f2241fb9): <https://commits.webkit.org/263492@main> Reviewed commits have been landed. Closing PR #13239 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-28 00:57:17 PDT
Note You need to log in before you can comment on or make changes to this bug.