[GStreamer][WebAudio] Missing playing notification in AudioDestination https://bugs.webkit.org/show_bug.cgi?id=256046

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::AudioDestinationGStreamer::notifyStartupResult): Similarly to notifyStopResult(), call
notifyIsPlaying() in case of startup success.

Canonical link: https://commits.webkit.org/263492@main